ISSUE-64: * Add authorization endpoint (e.g. /auth, requestBody: {email, password}). Return generated JWT * Restrict unauthorized access to all endpoint except auth. * Add JWT and Security Exceptions handling * java SSLHandshakeException problem checked * add success login e2e test * add failed access e2e test * add JwtAuthenticationService Integration tests
