# user-profile-service/src/main/java/com/iprody/user/profile/dto/AuthenticationRequest.java
@@ -1,0 +1,18 @@
+package com.iprody.user.profile.dto;
+
+import lombok.Builder;
+import lombok.Getter;
+
+@Getter
+@Builder
+public class AuthenticationRequest {
+
+    /**
+     * Users email.
+     */
+    private String email;
+    /**
+     * Raw users password.
+     */
+    private String password;
+}
