# user-profile-service/src/main/java/com/iprody/user/profile/dto/AuthenticationResponse.java
@@ -1,0 +1,19 @@
+package com.iprody.user.profile.dto;
+
+import lombok.AllArgsConstructor;
+import lombok.Builder;
+import lombok.Getter;
+
+@Getter
+@Builder
+@AllArgsConstructor
+public class AuthenticationResponse {
+    /**
+     * access token.
+     */
+    private String accessToken;
+    /**
+     * refresh token.
+     */
+    private String refreshToken;
+}
