# user-profile-service/src/main/java/com/iprody/user/profile/dto/TokenType.java
@@ -1,0 +1,12 @@
+package com.iprody.user.profile.dto;
+
+public enum TokenType {
+    /**
+     * for access token.
+     */
+    ACCESS,
+    /**
+     * for refresh token.
+     */
+    REFRESH
+}
